# multimodal-data-pipeline

./: .gitattributes  .gitignore  LICENSE  README.md  checklist.md  demo_complete_text_analysis.py  demo_complete_text_integration.py  demo_enhanced_pipeline.py  demo_feature_grouping.py  demo_five_text_analyzers.py  demo_simcse_complete.py  pyproject.toml  requirements.csv  run.sh  run_all.ps1  run_all.sh  run_openpose_cli.py  run_openpose_only.sh  run_pipeline.py  run_pipeline.sh  run_pyfeat_only.sh  run_simple.py  setup_env.ps1  setup_env.sh
demo/: demo_arbex.py  demo_complete_text_analysis.py  demo_complete_text_integration.py  demo_crowdflow.py  demo_dan_emotion_recognition.py  demo_deep_hrnet.py  demo_emotieffnet_video_emotion.py  demo_enhanced_pipeline.py  demo_feature_grouping.py  demo_five_text_analyzers.py  demo_ganimation.py  demo_instadm.py  demo_lanegcn.py  demo_me_graphau_facial_au.py  demo_mediapipe_pose.py  demo_openpose.py  demo_optical_flow.py  demo_psa_vision.py  demo_pyfeat.py  demo_rsn_keypoint_localization.py  demo_simcse_complete.py  demo_simple_baselines.py  demo_smoothnet.py  demo_videofinder.py
doc/: manual_installation.md  quickstart.md
scripts/: install_dependencies.sh  openpose_setup.sh  run_openpose_stage.sh  run_pipeline_stage.sh  setup_all_repos.py
src/: __init__.py  example.py  feature_extractor.py  pipeline.py
src/audio/: __init__.py  advanced_features.py  opensmile_features.py  spectral_features.py
src/emotion/: heinsen_routing_sentiment.py
src/features/: comprehensive_features.py
src/speech/: __init__.py  emotion_recognition.py  s2t_speech_to_text.py  speech_separator.py  whisperx_transcriber.py  xlsr_speech_to_text.py
src/text/: albert_analyzer.py  deberta_analyzer.py  use_analyzer.py
src/utils/: __init__.py  file_utils.py
src/vision/: __init__.py  dan_analyzer.py  deep_hrnet_analyzer.py  emotieffnet_analyzer.py  ganimation_analyzer.py  instadm_analyzer.py  lanegcn_analyzer.py  openpose_analyzer.py  optical_flow_analyzer.py  psa_analyzer.py  pyfeat_analyzer.py  rsn_analyzer.py  smoothnet_analyzer.py
tests/: test_dan_integration.py  test_me_graphau_integration.py  test_opensmile.py  test_refactor.py  test_vision_analyzers.py
