[tool.poetry]
name = "multimodal-data-pipeline"
version = "0.1.0"
description = "Comprehensive multimodal data processing pipeline"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scikit-learn = "^1.7.0"
jupyter = "^1.1.1"
notebook = "^7.4.3"
ipython = "^9.3.0"
opencv-python = "^4.11.0.86"
pillow = "^11.2.1"
torch = "^2.7.1"
torchvision = "^0.22.1"
torchaudio = "^2.7.1"
transformers = "^4.52.4"
speechbrain = "^1.0.3"
opensmile = "^2.5.1"
sentence-transformers = "^4.1.0"
datasets = "^3.6.0"
accelerate = "^1.8.1"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"
moviepy = "^2.2.1"
tqdm = "^4.67.1"
requests = "^2.32.4"
pathlib2 = "^2.3.7.post1"
python-dotenv = "^1.1.0"
joblib = "^1.5.1"
audiostretchy = {extras = ["all"], version = "^1.3.5"}
heinsen-routing = {git = "https://github.com/glassroom/heinsen_routing.git"}
timm = "^1.0.15"
efficientnet-pytorch = "^0.7.1"
h5py = "^3.14.0"
pyarrow = "^20.0.0"
numpy = ">=1.26,<2.0"
librosa = "^0.11.0"
soundfile = "^0.13.1"
pydub = "^0.25.1"
tensorflow = ">=2.19,<3.0"
tensorflow-hub = "^0.16.1"
mediapipe = ">=0.10.21,<1.0"
dlib = "^20.0.0"
face-recognition = "^1.3.0"
