[tool.poetry]
name = "multimodal-data-pipeline"
version = "0.1.0"
description = "Orchestrator project for the multimodal feature extraction pipeline."
authors = ["Multimodal Pipeline Maintainers <ml-pipeline@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "core_pipeline", from = "packages/core_pipeline" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26"
pandas = "^2.2"
scikit-learn = "^1.4.2"
tqdm = "^4.66"
audio-models = { path = "packages/audio_models", develop = true }
cv-models = { path = "packages/cv_models", develop = true }
nlp-models = { path = "packages/nlp_models", develop = true, extras = ["tensorflow-stack"] }
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
ruff = "^0.4.4"
pre-commit = "^3.7"

[tool.poetry.scripts]
run-pipeline = "core_pipeline.example:main"

[tool.poetry.extras]
audio = ["audio-models"]
vision = ["cv-models"]
nlp = ["nlp-models"]
all = ["audio-models", "cv-models", "nlp-models"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
